--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,49 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  background-color: #E3E3E3 ;
+}
+nav{
+  background-color: #0033ab;
+  color: white;
+  box-shadow: 0 2px 4px 0 rgba(174,156,110  ,.6);
+  border-bottom: solid 0.2rem #AE9B6D;
+}
+.navbar-brand{
+  color: #fff;
+  font-weight: bold;
+  font-size: xxx-large;
+}
+.navbar-brand:focus, .navbar-brand:hover{
+  color: #fff;
+}
+.navbar-brand img{
+  max-height: 6rem;
+}
+h1{
+  color: aliceblue;
+}
+fieldset{
+  background-color: #E3E3E3;
+  color: white;
+  box-shadow: 2px 4px 4px 2px rgba(174,156,110  ,.6);
+  border: solid 0.1rem rgba(0,51,171  ,.2) !important;
+  min-height: 28rem;
+}
+fieldset legend{
+  color: #0033ab;
+}
+
+.btn-primary{
+  background-color: #0033ab !important;
+  box-shadow: 0 2px 2px 1px rgba(174,156,110  ,.6);
+}
+
+@media screen and (max-width: 380px){
+  .navbar-brand img{
+    max-width: 6rem;
+  }
+  .navbar-brand{
+    font-size: xx-large;
+  }
+
+}
