--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar" [ngClass]="isNavbarFixed ? 'fixed-top' : '' ">
     <div class="container-fluid">
       <div class="navbar-brand">
-        <img src="/assets/images/upm-logo.png" alt="UPM Logo">
+        <img src="./assets/images/upm-logo.png" alt="UPM Logo">
         Email Reader
       </div>
     </div>
