--- a/src/app/pages/email-reader/email-reader-basic/email-reader-basic.component.css
+++ b/src/app/pages/email-reader/email-reader-basic/email-reader-basic.component.css
@@ -23,6 +23,10 @@ mwlResizable {
   width: 100%;
 }
 
+.resizable .resize-handle {
+  pointer-events: none;
+}
+
 .resize-handle-top {
   top: 0;
 }
