--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,23 @@
 <header>
-  <nav class="navbar" [ngClass]="isNavbarFixed ? 'fixed-top' : '' ">
+  <nav class="navbar navbar-dark navbar-expand-lg" [ngClass]="isNavbarFixed ? 'fixed-top' : '' ">
     <div class="container-fluid">
       <div class="navbar-brand">
         <img src="./assets/images/upm-logo.png" alt="UPM Logo">
-        Email Reader
+
+      </div>
+      <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">&#9776;</button>
+      <div  [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse justify-content-lg-end">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" [routerLink]="''" (click)="isMenuCollapsed = true" [routerLinkActive]="['is-active']" [routerLinkActiveOptions]="{ exact: true }">Email Reader</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="'email-list'" (click)="isMenuCollapsed = true" [routerLinkActive]="['is-active']">Email List</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="'email-form'" (click)="isMenuCollapsed = true" [routerLinkActive]="['is-active']">Email Form</a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
