--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,15 @@ nav{
   box-shadow: 0 2px 4px 0 rgba(174,156,110  ,.6);
   border-bottom: solid 0.2rem #AE9B6D;
 }
+
+.navbar{
+  --bs-navbar-padding-y: 0 !important;
+  --bs-navbar-brand-padding-y: 0 !important;
+  clear: both !important;
+  margin-bottom: 0 !important;
+  margin-top: 0 !important;
+}
+
 .navbar-brand{
   color: #fff;
   font-weight: bold;
@@ -17,7 +26,7 @@ nav{
   color: #fff;
 }
 .navbar-brand img{
-  max-height: 6rem;
+  width: 350px;
 }
 h1{
   color: aliceblue;
@@ -45,7 +54,7 @@ fieldset legend{
 
 @media screen and (max-width: 480px){
   .navbar-brand img{
-    max-width: 6rem;
+    max-width: 14rem;
   }
   .navbar-brand{
     font-size: x-large;
