--- a/src/app/pages/email-reader/email-viewer/email-viewer.component.html
+++ b/src/app/pages/email-reader/email-viewer/email-viewer.component.html
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="row mt-3">
-        <div class="col-md-6 col-sm-12">
+        <div class="col-md-12">
           <div class="input-group">
             <label for="body" class="input-group-text">Message</label>
             <textarea id="body" name="body" disabled readonly class="form-control" value="{{email.body}}"></textarea>
